--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
